[package]
name = "pipedrive"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors"]
description = "Pipedrive API client for v1 and v2"
license = "MIT"
repository = "https://github.com/Himmelschmidt/pipedrive"
edition = "2021"

[features]
default = ["v2"]
v1 = []
v2 = []

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = [
    "base64",
    "std",
    "macros",
] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", default-features = false, features = [
    "json",
    "multipart",
] }
